[package]
name = "load_async_fn_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
async-trait = "0.1"

[dependencies.load_async_fn_define]
path="../load_async_fn_define"