[package]
name = "load_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "load_async_trait"
path = "src/main.rs"

[dependencies]
libloading = "0.8"

tokio = { version = "1.32.0", features = ["full"] }

futures = "0.3"

[dependencies.load_define]
path="../load_define"